# nb

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  __main__.py  app.json  pyproject.toml
.github/workflows/: publish-ghcr.yml
nb/: __init__.py  cli.py  config.py  const.py  live.py  past.py  plugin_models.py  storage.py  utils.py
nb/bot/: __init__.py  live_bot.py  utils.py
nb/plugins/: __init__.py  caption.py  filter.py  fmt.py  mark.py  ocr.py  replace.py  sender.py  spoiler.py
nb/web_ui/: 0_👋_Hello.py  password.py  run.py  utils.py
nb/web_ui/page/: 3_🔗_Connections.py  4_🔌_Plugins.py  5_🏃_Run.py  6_🔬_Advanced.py
nb/web_ui/pages/: 1_✈️_TG登录.py  1_🔑_Telegram_Login.py  2_⭐_Admins.py  2_🛡️_管理员.py  3_🔄_连接.py  3_🔗_Connections.py  4_🔌_Plugins.py  4_🧩_插件.py  5_🏃_Run.py  5_🚀_运行.py  6_⚙️_高级.py  6_🔬_Advanced.py
