[tool.poetry]
name = "nb"
version = "2.0.0"
description = "The ultimate tool to automate custom telegram message forwarding."
authors = ["artai8 <daw@artai8.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/artai8/nb"
documentation = "https://github.com/artai8/nb/wiki"

[tool.poetry.dependencies]
python = "^3.14"
requests = "^2.31.0"
typer = "^0.12.0"
python-dotenv = "^1.0.1"
pydantic = "^2.7.0"
Telethon = "^1.42.0"
# cryptg = "^0.4.0"  <-- 务必注释掉，这是 CI 构建失败的万恶之源
Pillow = "^10.3.0"
hachoir = "^3.3.0"
aiohttp = "^3.9.5"
tg-login = "^0.0.4"
"watermark.py" = "^0.0.3"
pytesseract = "^0.3.10"
rich = "^13.7.1"
verlat = "^0.1.0"
streamlit = "^1.54.0"
altair = "^5.2.0"
PyYAML = "^6.0.1"
pymongo = "^4.6.3"

[tool.poetry.dev-dependencies]
black = {version = "^24.3.0", allow-prereleases = true}
isort = "^5.13.2"
pre-commit = "^3.7.0"
pylint = "^3.1.0"
ipykernel = "^6.29.0"

[tool.poetry.scripts]
nb = 'nb.cli:app'
nb-web = 'nb.web_ui.run:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
